--- a/Myerp/Tpl/Chanpin/customer.html
+++ b/Myerp/Tpl/Chanpin/customer.html
@@ -9,7 +9,7 @@
             <div id="resultdiv" class="resultdiv"></div>
             <div id="resultdiv_2" class="resultdiv"></div>
             
-            <include file="Index:search_xianlu" />
+            <include file="Index:search_customer" />
             
             <table cellpadding="0" cellspacing="0" width="100%" class="list view">
               <tbody>
@@ -67,10 +67,8 @@
 
 <tp:includeCA file="Index:footer" />
 <script language="javascript"> 
-function dosearch()
-{
-		title = document.getElementById('title').value;
-		window.location = '<{:SITE_INDEX}>Chanpin/index/title/'+title;
+function dosearch(str){
+		window.location = '<{:SITE_INDEX}>Chanpin/customer'+str;
 }
 
 function TravelerDetail(systemID){
