--- a/Myerp/Tpl/Chanpin/kongguan.html
+++ b/Myerp/Tpl/Chanpin/kongguan.html
@@ -1,6 +1,4 @@
 <tp:includeCA file="Index:showheader" />
-<link href="<{:__PUBLIC__}>/gulianstyle/styles/jquery.autocomplete.css" rel="stylesheet" type="text/css" />
-<script src="<{:__PUBLIC__}>/gulianstyle/styles/jquery.autocomplete.min.js" language="javascript"></script>
 <script language="javascript" type="text/javascript" src="<{:__PUBLIC__}>/gulianstyle/My97DatePicker/WdatePicker.js"></script>
 <script language="javascript" type="text/javascript" src="<{:__PUBLIC__}>/myerp/Chanpin/xianlu.js"></script>
 
@@ -9,7 +7,7 @@
   <div id="content" style="margin-left:170px;">
     <div id="resultdiv" class="resultdiv"></div>
     <div id="resultdiv_2" class="resultdiv"></div>
-    <include file="Index:search_xianlu" />
+    <include file="Index:search_zituan" />
     
     <div id="mysearchdiv" style="margin:10px 0 0 0;">
       <ul id="searchTabs" class="tablist tablist_2">
@@ -126,11 +124,8 @@
 </div>
 <tp:includeCA file="Index:footer" />
 <script language="javascript"> 
-
-function dosearch()
-{
-		title = document.getElementById('title').value;
-		window.location = '<{:SITE_INDEX}>Chanpin/index/title/'+title;
+function dosearch(str){
+		window.location = '<{:SITE_INDEX}>Chanpin/kongguan'+str;
 }
 </script>
 <div id="selectitem" style=" display:none; position:absolute;">
