--- a/Myerp/Tpl/Dijie/index.html
+++ b/Myerp/Tpl/Dijie/index.html
@@ -9,7 +9,7 @@
   <div id="content" style="margin-left:170px;">
     <div id="resultdiv" class="resultdiv"></div>
     <div id="resultdiv_2" class="resultdiv"></div>
-    <include file="Index:search_xianlu" />
+    <include file="Index:search_dijie" />
     <table cellpadding="0" cellspacing="0" width="100%" class="list view">
       <tbody>
         <tr class="pagination">
@@ -65,10 +65,8 @@
 <tp:includeCA file="Index:footer" />
 <script language="javascript"> 
 
-function dosearch()
-{
-		title = document.getElementById('title').value;
-		window.location = '<{:SITE_INDEX}>Chanpin/index/title/'+title;
+function dosearch(str){
+		window.location = '<{:SITE_INDEX}>Dijie/index'+str;
 }
 </script>
 <div id="selectitem" style=" display:none; position:absolute;">
