--- a/Myerp/Tpl/Caiwu/tongji_jixiao.html
+++ b/Myerp/Tpl/Caiwu/tongji_jixiao.html
@@ -1,7 +1,5 @@
 <tp:includeCA file="Index:showheader" />
 
-<link href="<{:__PUBLIC__}>/gulianstyle/styles/jquery.autocomplete.css" rel="stylesheet" type="text/css" />
-<script src="<{:__PUBLIC__}>/gulianstyle/styles/jquery.autocomplete.min.js" language="javascript"></script>
 <script language="javascript" type="text/javascript" src="<{:__PUBLIC__}>/gulianstyle/My97DatePicker/WdatePicker.js"></script>
 <script language="javascript" type="text/javascript" src="<{:__PUBLIC__}>/myerp/Chanpin/xianlu.js"></script>
 
@@ -12,7 +10,7 @@
             <div id="resultdiv" class="resultdiv"></div>
             <div id="resultdiv_2" class="resultdiv"></div>
             
-            <include file="Index:search_xianlu" />
+            <include file="Index:search_jixiaotongji" />
             
             <div id="mysearchdiv" style="margin:10px 0 0 0;">
               <ul id="searchTabs" class="tablist tablist_2">
@@ -266,10 +264,8 @@
 <tp:includeCA file="Index:footer" />
 
 <script language="javascript"> 
-function dosearch()
-{
-		title = document.getElementById('title').value;
-		window.location = '<{:SITE_INDEX}>Chanpin/index/title/'+title;
+function dosearch(str){
+		window.location = '<{:SITE_INDEX}>Caiwu/jixiao_tongji/type/<{$type}>'+str;
 }
 </script>
 
