--- a/Myerp/Tpl/Caiwu/zituanlist.html
+++ b/Myerp/Tpl/Caiwu/zituanlist.html
@@ -1,6 +1,4 @@
 <tp:includeCA file="Index:showheader" />
-<link href="<{:__PUBLIC__}>/gulianstyle/styles/jquery.autocomplete.css" rel="stylesheet" type="text/css" />
-<script src="<{:__PUBLIC__}>/gulianstyle/styles/jquery.autocomplete.min.js" language="javascript"></script>
 <script language="javascript" type="text/javascript" src="<{:__PUBLIC__}>/gulianstyle/My97DatePicker/WdatePicker.js"></script>
 <script language="javascript" type="text/javascript" src="<{:__PUBLIC__}>/myerp/Chanpin/xianlu.js"></script>
 
@@ -119,10 +117,8 @@
 <tp:includeCA file="Index:footer" />
 <script language="javascript"> 
 
-function dosearch()
-{
-		title = document.getElementById('title').value;
-		window.location = '<{:SITE_INDEX}>Chanpin/index/title/'+title;
+function dosearch(str){
+		window.location = '<{:SITE_INDEX}>Caiwu/zituanlist'+str;
 }
 </script>
 <div id="selectitem" style=" display:none; position:absolute;">
