Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Index/forme.html
+++ b/Myerp/Tpl/Index/forme.html
@@ -5,4 +5,5 @@
 <a href="/index.php?s=/Forme/fillSystemAll" target="_blank" >fillSystemAll</a><br>
 <a href="/index.php?s=/Forme/doCustomer" target="_blank" >doCustomer</a><br>
 <a href="/index.php?s=/Forme/fillSystemAll" target="_blank" >fillSystemAll</a><br>
+<a href="/index.php?s=/Forme/_tempdata_to_database" target="_blank" >_tempdata_to_database</a><br>
 
