Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Dijie/fabu.html
+++ b/Myerp/Tpl/Dijie/fabu.html
@@ -252,7 +252,7 @@ function checktitle(){
                     <tr>
                       <td style="line-height:28px;"><input type="file" name="attachment" id="attachment" />
                       <php>if($djtuan['attachment']){</php>
-                      <a href="<{:SITE_DATA}>Attachments/<{$djtuan['attachment']}>">点击查看</a>已上传文件
+                      <a href="<{:SITE_DATA}>Files/<{$djtuan['attachment']}>">点击查看</a>已上传文件
                       <php>}</php>
                       </td>
                     </tr>
