--- a/Myerp/Tpl/Message/paituanbiao.html
+++ b/Myerp/Tpl/Message/paituanbiao.html
@@ -176,7 +176,7 @@ function uploadComplete(data){
 }
 
 function download(url){
-	window.location = '<{:SITE_DATA}>Attachments/'+url;
+	window.location = '<{:SITE_DATA}>Files/'+url;
 }
 
 </script> 
