Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Index/forme.html
+++ b/Myerp/Tpl/Index/forme.html
@@ -5,3 +5,4 @@
 <a href="/index.php?s=/Forme/fillSystemAll" target="_blank" >fillSystemAll</a><br>
 <a href="/index.php?s=/Forme/doCustomer" target="_blank" >游客</a><br>
 <a href="/index.php?s=/Forme/fillusertouser" target="_blank" >补填用户</a><br>
+<a href="/index.php?s=/Forme/fillbumentobumen" target="_blank" >补填部门</a><br>
