Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Index/forme.html
+++ b/Myerp/Tpl/Index/forme.html
@@ -6,3 +6,5 @@
 <a href="/index.php?s=/Forme/doCustomer" target="_blank" >游客</a><br>
 <a href="/index.php?s=/Forme/fillusertouser" target="_blank" >补填用户</a><br>
 <a href="/index.php?s=/Forme/fillbumentobumen" target="_blank" >补填部门</a><br>
+<a href="/index.php?s=/Forme/resetsystemstatus" target="_blank" >重置系统表</a><br>
+<a href="/index.php?s=/Forme/clearuselessdata" target="_blank" >清除多余数据</a><br>
