Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Index/forme.html
+++ b/Myerp/Tpl/Index/forme.html
@@ -8,3 +8,4 @@
 <a href="/index.php?s=/Forme/fillbumentobumen" target="_blank" >补填部门</a><br>
 <a href="/index.php?s=/Forme/resetsystemstatus" target="_blank" >重置系统表</a><br>
 <a href="/index.php?s=/Forme/clearuselessdata" target="_blank" >清除多余数据</a><br>
+<a href="/index.php?s=/Forme/cleartabledata" target="_blank" >清空临时数据</a><br>
