Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Index/forme.html
+++ b/Myerp/Tpl/Index/forme.html
@@ -1,8 +1,7 @@
 <include file="Index:simple_header" />
 <div id="main">
-<a href="/index.php?s=/Forme/chanpinxianlu" target="_blank" >chanpinxianlu</a><br>
-<a href="/index.php?s=/Forme/chanpindijie" target="_blank" >chanpindijie</a><br>
-<a href="/index.php?s=/Forme/fillSystemAll" target="_blank" >fillSystemAll</a><br>
+<a href="/index.php?s=/Forme/chanpinxianlu" target="_blank" >线路</a><br>
+<a href="/index.php?s=/Forme/chanpindijie" target="_blank" >地接</a><br>
 <a href="/index.php?s=/Forme/doCustomer" target="_blank" >游客</a><br>
 <a href="/index.php?s=/Forme/fillusertouser" target="_blank" >补填用户</a><br>
 <a href="/index.php?s=/Forme/fillbumentobumen" target="_blank" >补填部门</a><br>
