--- a/Myerp/Tpl/SetSystem/templatelist.html
+++ b/Myerp/Tpl/SetSystem/templatelist.html
@@ -51,7 +51,11 @@ var SITE_INDEX = '<{:SITE_INDEX}>';
         <td scope="row" align="left" valign="top"><{$i}></td>
         <td scope="row" align="left" valign="top"><input type="text" id="title<{$v['systemID']}>" style="width:200px" value="<{$v['title']}>"></td>
         <td scope="row" align="left" valign="top"><{$v['type']}></td>
+        <php>if($v[islock] == '已锁定'){</php>
+        <td scope="row" align="left" valign="top" style="color:red"><{$v['islock']}></td>
+        <php>}else{</php>
         <td scope="row" align="left" valign="top"><{$v['islock']}></td>
+        <php>}</php>
         <td scope="row" align="left" valign="top">
         <input class="button" type="button" value="删除" onClick="deleteSystemItem(<{$v['systemID']}>,'itemlist')" />
         <input class="button" type="button" value="锁定" onClick="lockSystemItem(<{$v['systemID']}>,'itemlist','','已锁定')" />
@@ -408,7 +412,11 @@ var SITE_INDEX = '<{:SITE_INDEX}>';
               <td scope="row" align="left" valign="top"><{$i}></td>
               <td scope="row" align="left" valign="top"><{$v['title']}></td>
               <td scope="row" align="left" valign="top"><{$v['user_gender']}></td>
-              <td scope="row" align="left" valign="top"><{$v['islock']}></td>
+            <php>if($v[islock] == '已锁定'){</php>
+            <td scope="row" align="left" valign="top" style="color:red"><{$v['islock']}></td>
+            <php>}else{</php>
+            <td scope="row" align="left" valign="top"><{$v['islock']}></td>
+            <php>}</php>
               <td scope="row" align="left" valign="top">
               <input class="button" type="button" value="部门角色" onclick="openDUR(<{$v[systemID]}>,'<{$v['title']}>')"/>
               <input class="button" type="button" value="修改"/>
@@ -816,6 +824,10 @@ var SITE_INDEX = '<{:SITE_INDEX}>';
         <input type="checkbox" name="type[]" value="组团" class="type<{$v['systemID']}>" checked="checked"/><label style="color:#4e8ccf">组团</label>
         <php>}else{</php>
         <input type="checkbox" name="type[]" value="组团" class="type<{$v['systemID']}>"/>组团
+        <php>if(in_array('业务',$typearray)){</php>
+        <input type="checkbox" name="type[]" value="业务" class="type<{$v['systemID']}>" checked="checked"/><label style="color:#4e8ccf">业务</label>
+        <php>}else{</php>
+        <input type="checkbox" name="type[]" value="业务" class="type<{$v['systemID']}>"/>业务
         <php>}if(in_array('地接',$typearray)){</php>
         <input type="checkbox" name="type[]" value="地接" class="type<{$v['systemID']}>" checked="checked"/><label style="color:#4e8ccf">地接</label>
         <php>}else{</php>
@@ -847,7 +859,11 @@ var SITE_INDEX = '<{:SITE_INDEX}>';
         <td scope="row" align="left" valign="top"><input type="text" id="postal<{$v['systemID']}>" style="width:80px" value="<{$v['postal']}>"></td>
         <td scope="row" align="left" valign="top"><input type="text" id="addr<{$v['systemID']}>" value="<{$v['addr']}>"></td>
         <td scope="row" align="left" valign="top"><input type="text" id="fax<{$v['systemID']}>" style="width:80px" value="<{$v['fax']}>"></td>
+        <php>if($v[islock] == '已锁定'){</php>
+        <td scope="row" align="left" valign="top" style="color:red"><{$v['islock']}></td>
+        <php>}else{</php>
         <td scope="row" align="left" valign="top"><{$v['islock']}></td>
+        <php>}</php>
         <td scope="row" align="left" valign="top">
         <input class="button" type="button" value="锁定/解锁" onClick="deleteSystemItem(<{$v['systemID']}>,'itemlist')" />
         <input class="button" type="button" value="修改" onClick="if(CheckForm('form<{$v[systemID]}>','resultdiv_2'))save(<{$v['systemID']}>,'itemlist<{$v[systemID]}>');"/>
@@ -918,7 +934,11 @@ var SITE_INDEX = '<{:SITE_INDEX}>';
         <td scope="row" align="left" valign="top"><{$i}></td>
         <td scope="row" align="left" valign="top"><form id="form<{$v['systemID']}>" ><input type="text" name="title" id="title<{$v['systemID']}>" value="<{$v['title']}>"></form></td>
         <td scope="row" align="left" valign="top"><input type="text" id="remark<{$v['systemID']}>" style="width:400px" value="<{$v['remark']}>"></td>
+        <php>if($v[islock] == '已锁定'){</php>
+        <td scope="row" align="left" valign="top" style="color:red"><{$v['islock']}></td>
+        <php>}else{</php>
         <td scope="row" align="left" valign="top"><{$v['islock']}></td>
+        <php>}</php>
         <td scope="row" align="left" valign="top">
         <input class="button" type="button" value="锁定/解锁" onClick="deleteSystemItem(<{$v['systemID']}>,'itemlist')" />
         <input class="button" type="button" value="修改" onClick="if(CheckForm('form<{$v[systemID]}>','resultdiv_2'))save(<{$v['systemID']}>,'itemlist<{$v[systemID]}>');"/>
