--- a/Myerp/Tpl/Caiwu/tongji_jixiao.html
+++ b/Myerp/Tpl/Caiwu/tongji_jixiao.html
@@ -48,7 +48,7 @@
               </tbody>
             </table>
             <php>}</php>
-            
+            截止11月份之前的数据未做统计（ps：订单审核后才会被当作有效数据）
             <table cellpadding="0" cellspacing="0" width="100%" class="list view">
               <tbody>
                 <tr class="pagination">
@@ -327,7 +327,8 @@ function opendialog_1(){
 function opendialog_1_1(){
 	jQuery.ajax({
 		type:	"POST",
-		url:	"<{:SITE_INDEX}>Caiwu/jixiao_tongji/returntype/ajax/returnkind/收客/type/部门/systemID/"+systemID,
+//		url:	"<{:SITE_INDEX}>Caiwu/jixiao_tongji/returntype/ajax/returnkind/收客/type/部门/systemID/"+systemID,
+		url:	"<{$_SERVER[REQUEST_URI]}>/returntype/ajax/returnkind/部门/systemID/"+systemID,
 		data:	"",
 		success:	function(msg){
 				ThinkAjax.myAjaxResponse(msg,'',click_after);
@@ -338,7 +339,8 @@ function opendialog_1_1(){
 function opendialog_2(){
 	jQuery.ajax({
 		type:	"POST",
-		url:	"<{:SITE_INDEX}>Caiwu/jixiao_tongji/returntype/ajax/returnkind/操作/type/员工/title/"+title,
+//		url:	"<{:SITE_INDEX}>Caiwu/jixiao_tongji/returntype/ajax/returnkind/操作/type/员工/title/"+title,
+		url:	"<{$_SERVER[REQUEST_URI]}>/returntype/ajax/returnkind/操作/title/"+title,
 		data:	"",
 		success:	function(msg){
 				ThinkAjax.myAjaxResponse(msg,'',click_after);
@@ -349,7 +351,8 @@ function opendialog_2(){
 function opendialog_2_2(){
 	jQuery.ajax({
 		type:	"POST",
-		url:	"<{:SITE_INDEX}>Caiwu/jixiao_tongji/returntype/ajax/returnkind/操作/type/部门/systemID/"+systemID,
+//		url:	"<{:SITE_INDEX}>Caiwu/jixiao_tongji/returntype/ajax/returnkind/操作/type/部门/systemID/"+systemID,
+		url:	"<{$_SERVER[REQUEST_URI]}>/returntype/ajax/returnkind/操作/systemID/"+systemID,
 		data:	"",
 		success:	function(msg){
 				ThinkAjax.myAjaxResponse(msg,'',click_after);
