--- a/Myerp/Tpl/Index/search_dingdan.html
+++ b/Myerp/Tpl/Index/search_dingdan.html
@@ -48,8 +48,11 @@
                         <tr>
                           <td scope="row" nowrap="nowrap"> 团名 </td>
                           <td nowrap="nowrap"><input type="text" class="title_2" value="<{$title}>"></td>
-                          <td scope="row" nowrap="nowrap"> 操作人 </td>
-                          <td nowrap="nowrap"><input type="text" class="fuzeren_2" value="<{$fuzeren}>"></td>
+                          <td scope="row" nowrap="nowrap"> 时间 </td>
+                          <td nowrap="nowrap">
+                          <input type="text" onfocus="WdatePicker()" class="start_time" value="<{$start_time}>">
+                          <span>--</span>
+                          <input type="text" onfocus="WdatePicker()" class="end_time" value="<{$end_time}>"></td>
                           <td scope="row" nowrap="nowrap"> 收客人 </td>
                           <td nowrap="nowrap"><input type="text" class="owner_2" value="<{$owner}>"></td>
                         </tr>
@@ -149,7 +152,8 @@ function clearsearch(){
 		jQuery('.title_1').val('');
 		jQuery('.title_2').val('');
 		jQuery('.start_time').val('');
-		jQuery('.fuzeren').val('');
+		jQuery('.start_time').val('');
+		jQuery('.end_time').val('');
 		jQuery('.owner').val('');
 		jQuery('.lianxiren').val('');
 		jQuery('.type').val('');
@@ -161,8 +165,10 @@ function _dosearch(sorttabid){
 	var str ='';
 	if(jQuery('.title_'+sorttabid).val())
 	str += '/title/'+jQuery('.title_'+sorttabid).val();
-	if(jQuery('.fuzeren_'+sorttabid).val())
-	str += '/fuzeren/'+jQuery('.fuzeren_'+sorttabid).val();
+	if(jQuery('.start_time').val())
+	str += '/start_time/'+jQuery('.start_time').val();
+	if(jQuery('.end_time').val())
+	str += '/end_time/'+jQuery('.end_time').val();
 	if(jQuery('.owner_'+sorttabid).val())
 	str += '/owner/'+jQuery('.owner_'+sorttabid).val();
 	if(jQuery('.lianxiren').val())
