Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Index/header.html
+++ b/Myerp/Tpl/Index/header.html
@@ -40,8 +40,9 @@ var SITE_PUBLIC = '<{:__PUBLIC__}>';
   <div id="companyLogo" style="padding:4px 15px 10px;"> <img src="<{:__PUBLIC__}>/myerp/images/company_logo.png" width="212" height="40" alt="Company Logo" border="0"> </div>
   <div id="globalLinks" style="padding:18px 0 0 10px;">
     <ul>
-      <li> <a href="#">我的帐户</a> </li>
-      <li> <span>|</span> <a href="#">培训</a> </li>
+      <li> <a href="#">用户信息</a> </li>
+      <li> <span>|</span> <a href="#">修改密码</a> </li>
+      <li> <span>|</span> <a target="_blank" href="<{:SITE_INDEX}>Index/FAQ">FAQ</a> </li>
       <li> <span>|</span> <a href="#">关于</a> </li>
     </ul>
   </div>
