--- a/Myerp/Tpl/SetSystem/DDindex.html
+++ b/Myerp/Tpl/SetSystem/DDindex.html
@@ -34,6 +34,10 @@
           <td width="20%" scope="row"><img border="0" width="16" height="16" align="absmiddle" src="<{:__PUBLIC__}>/myerp/images/icon_Meetings_32.gif">&nbsp;<a href="<{:SITE_INDEX}>SetSystem/dataDictionary/type/提成">提成</a></td>
           <td width="30%">订单提成</td>
         </tr>
+        <tr>
+          <td width="20%" scope="row"><img border="0" width="16" height="16" align="absmiddle" src="<{:__PUBLIC__}>/myerp/images/help.gif">&nbsp;<a href="<{:SITE_INDEX}>SetSystem/dataDictionary/type/FAQ">FAQ</a></td>
+          <td width="30%">FAQ</td>
+        </tr>
       </tbody>
     </table>
     
