Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
+++ b/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
@@ -150,8 +150,11 @@
       else
       $high_2[$i] = $remark;
   }
-  $i_num = 8 - $i;
-  $j_num = 8-$j;
+  $max = $j;
+  if($i > $j)
+  $max = $i;
+  $i_num = $max - $i;
+  $j_num = $max - $j;
   </php>
   
   
