--- a/Myerp/Tpl/Chanpin/zituanbaozhang.html
+++ b/Myerp/Tpl/Chanpin/zituanbaozhang.html
@@ -436,7 +436,7 @@ function doshenhe_baozhangitem(dotype,datatype,dataID,title){
               <option value="对冲">对冲</option>
             </select></td>
           <td scope="row" align="left" valign="top"><input type="text" name="remark" id="remark<{$v['chanpinID']}>" value="<{$v['remark']}>"></td>
-          <td scope="row" align="left" valign="top"><{$v['status']}></td>
+          <td scope="row" align="left" valign="top"><{$v['shenhe_remark']}></td>
           <td scope="row" align="left" valign="top"><input class="button" type="button" value="删除" onClick="deleteSystemItem(<{$v['chanpinID']}>,'itemlist')" />
             <input class="button" type="button" value="修改" onClick="if(CheckForm('form_yingshou','resultdiv_2'))save(<{$v['chanpinID']}>,'itemlist<{$v[chanpinID]}>');"/>
       <php>
@@ -507,7 +507,7 @@ function doshenhe_baozhangitem(dotype,datatype,dataID,title){
               <option value="对冲">对冲</option>
             </select></td>
           <td scope="row" align="left" valign="top"><input type="text" name="remark" id="remark<{$v['chanpinID']}>" value="<{$v['remark']}>"></td>
-          <td scope="row" align="left" valign="top"><{$v['status']}></td>
+          <td scope="row" align="left" valign="top"><{$v['shenhe_remark']}></td>
           <td scope="row" align="left" valign="top"><input class="button" type="button" value="删除" onClick="deleteSystemItem(<{$v['chanpinID']}>,'itemlist')" />
             <input class="button" type="button" value="修改" onClick="if(CheckForm('form_yingshou','resultdiv_2'))save(<{$v['chanpinID']}>,'itemlist<{$v[chanpinID]}>');"/>
           <td scope="row" align="left" valign="top"><input type="checkbox" 
